# deps

./: .gitignore  README.md  UI_FINAL_CHECKLIST.md  cargo.toml  cargo_output.txt  index.html  package-lock.json  package.json  tmp_css_append  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  check_log.txt  tauri.conf.json
src-tauri/src/: history.rs  main.rs  npm.rs  project.rs  watcher.rs  workspace.rs
src-tauri/src/models/: mod.rs
src/components/: AuditModal.css  AuditModal.tsx  ConfirmationModal.css  ConfirmationModal.tsx  EmptyWorkspace.css  EmptyWorkspace.tsx  GlobalSearchResults.css  GlobalSearchResults.tsx  LanguageSwitcher.css  LanguageSwitcher.tsx  PackageDetails.css  PackageDetails.tsx  PackageHistory.css  PackageHistory.tsx  PackageTable.css  PackageTable.tsx  Sidebar.css  Sidebar.tsx  StatusHelp.css  StatusHelp.tsx  Terminal.css  Terminal.tsx  Toast.css  Toast.tsx  VersionInputModal.css  VersionInputModal.tsx
src/i18n/: texts.ts
src/lib/: api.ts
src/locales/: cs.json  en.json
src/types/: index.ts
