[package]
name = "app"
version = "0.1.0"
description = "Deps – native dependency manager"
authors = ["deps"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
ignore = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]


